@@ -57,6 +57,10 @@ JEDIT 4.0 VERSION HISTORY
 - When doing a BeanShell replace, the last subexpression would not be
   stored in a variable
 
++ API Additions
+
+- Added new method: MiscUtilities.getFileNameNoExtension(String path)
+
 + API Changes
 
 - The 'rethrowBshErrors' parameter of the eval() and runScript() methods
